--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "scully": "npx scully --",
-    "scully:serve": "npx scully serve --"
+    "scully": "node --experimental-specifier-resolution=node node_modules/.bin/scully --project website",
+    "scully:serve": "npx scully serve"
   },
   "private": true,
   "dependencies": {
@@ -20,12 +20,12 @@
     "@angular/forms": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/platform-server": "^12",
+    "@angular/platform-server": "13.1.0",
     "@angular/router": "~13.1.0",
     "@nrwl/angular": "13.4.3",
-    "@scullyio/ng-lib": "^2.1.0",
-    "@scullyio/platform-server": "^2.1.0",
-    "@scullyio/scully": "^2.1.0",
+    "@scullyio/ng-lib": "^3.0.0-beta.0",
+    "@scullyio/platform-server": "^3.0.0-beta.0",
+    "@scullyio/scully": "^3.0.0-beta.0",
     "clipboard": "^2.0.8",
     "prismjs": "^1.26.0",
     "rxjs": "~7.4.0",
@@ -49,7 +49,6 @@
     "@nrwl/tao": "13.4.3",
     "@nrwl/workspace": "13.4.3",
     "@scullyio/init": "^2.1.3",
-    "@scullyio/scully-plugin-puppeteer": "^2.1.3",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/prismjs": "^1.16.6",
