--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/platform-server": "13.1.0",
     "@angular/router": "~13.1.0",
-    "@nrwl/angular": "13.4.3",
+    "@nrwl/angular": "13.8.7",
     "@scullyio/ng-lib": "^3.0.0-beta.0",
     "@scullyio/platform-server": "^3.0.0-beta.0",
     "@scullyio/scully": "^3.0.0-beta.0",
@@ -40,15 +40,20 @@
     "@angular/cli": "~13.1.0",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/language-service": "~13.1.0",
-    "@nrwl/cli": "13.4.3",
-    "@nrwl/cypress": "13.4.3",
-    "@nrwl/eslint-plugin-nx": "13.4.3",
-    "@nrwl/jest": "13.4.3",
-    "@nrwl/linter": "13.4.3",
+    "@nrwl/cli": "13.8.7",
+    "@nrwl/cypress": "13.8.7",
+    "@nrwl/eslint-plugin-nx": "13.8.7",
+    "@nrwl/jest": "13.8.7",
+    "@nrwl/linter": "13.8.7",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "13.4.3",
-    "@nrwl/workspace": "13.4.3",
+    "@nrwl/storybook": "13.8.7",
+    "@nrwl/tao": "13.8.7",
+    "@nrwl/workspace": "13.8.7",
     "@scullyio/init": "^2.1.3",
+    "@storybook/addon-essentials": "~6.4.5",
+    "@storybook/angular": "~6.4.5",
+    "@storybook/builder-webpack5": "~6.4.5",
+    "@storybook/manager-webpack5": "~6.4.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/prismjs": "^1.16.6",
