--- a/nx.json
+++ b/nx.json
@@ -49,6 +49,9 @@
     },
     "@nrwl/angular:component": {
       "style": "scss"
+    },
+    "@schematics/angular:component": {
+      "style": "scss"
     }
   },
   "defaultProject": "website"
