--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/platform-server": "13.1.0",
-    "@angular/router": "~13.1.0",
-    "@nrwl/angular": "13.8.7",
+    "@angular/animations": "14.0.2",
+    "@angular/common": "14.0.2",
+    "@angular/compiler": "14.0.2",
+    "@angular/core": "14.0.2",
+    "@angular/forms": "14.0.2",
+    "@angular/platform-browser": "14.0.2",
+    "@angular/platform-browser-dynamic": "14.0.2",
+    "@angular/platform-server": "14.0.2",
+    "@angular/router": "14.0.2",
+    "@nrwl/angular": "14.3.5",
     "@scullyio/ng-lib": "^3.0.0-beta.0",
     "@scullyio/platform-server": "^3.0.0-beta.0",
     "@scullyio/scully": "^3.0.0-beta.0",
@@ -31,43 +31,44 @@
     "prismjs": "^1.26.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@storybook/core-server": "6.4.22"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
-    "@nrwl/cli": "13.8.7",
-    "@nrwl/cypress": "13.8.7",
-    "@nrwl/eslint-plugin-nx": "13.8.7",
-    "@nrwl/jest": "13.8.7",
-    "@nrwl/linter": "13.8.7",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/storybook": "13.8.7",
-    "@nrwl/tao": "13.8.7",
-    "@nrwl/workspace": "13.8.7",
+    "@angular-devkit/build-angular": "14.0.2",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "14.0.2",
+    "@angular/language-service": "14.0.2",
+    "@nrwl/cli": "14.3.5",
+    "@nrwl/cypress": "14.3.5",
+    "@nrwl/eslint-plugin-nx": "14.3.5",
+    "@nrwl/jest": "14.3.5",
+    "@nrwl/linter": "14.3.5",
+    "@nrwl/nx-cloud": "14.1.1",
+    "@nrwl/storybook": "14.3.5",
+    "@nrwl/workspace": "14.3.5",
     "@scullyio/init": "^2.1.3",
-    "@storybook/addon-essentials": "~6.4.5",
-    "@storybook/angular": "~6.4.5",
-    "@storybook/builder-webpack5": "~6.4.5",
-    "@storybook/manager-webpack5": "~6.4.5",
-    "@types/jest": "27.0.2",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/angular": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
     "@types/prismjs": "^1.16.6",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.2",
+    "prettier": "2.7.0",
+    "ts-jest": "27.1.4",
+    "typescript": "4.7.3",
+    "nx": "14.3.5"
   }
 }
